Task 5 b finished and fixed class structure.